fix: visibility issue

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -171,3 +171,7 @@ input {
         backdrop-filter: blur(10px);
         border: 1px solid rgba(255, 255, 255, 0.05);
 }
+
+.text-white {
+        color: #fff;
+}
